--- a/web/package.json
+++ b/web/package.json
@@ -1,17 +1,47 @@
 {
-  "name": "web",
+  "name": "mercury",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --ext .js,.tx,.tsx, src",
+    "lint-old": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint --ext .js,.ts,.tsx, src --fix",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@matejmazur/react-katex": "^3.1.3",
+    "@mui/joy": "5.0.0-beta.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.2",
+    "copy-to-clipboard": "^3.3.3",
+    "highlight.js": "^11.8.0",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "katex": "^0.16.8",
+    "lodash-es": "^4.17.21",
+    "long": "^5.2.3",
+    "lucide-react": "^0.263.1",
+    "nice-grpc-web": "^3.3.1",
+    "protobufjs": "^7.2.5",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^11.18.6",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
+    "react-use": "^17.4.0",
+    "semver": "^7.5.4",
+    "tailwindcss": "^3.3.3",
+    "textarea-caret": "^3.1.0",
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
