--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,6 @@
   "name": "mercury",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -53,6 +52,22 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.2",
+    "less": "^4.2.0",
+    "postcss": "^8.4.30",
+    "prettier": "2.6.2",
+    "terser": "^5.20.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
+    "@types/katex": "^0.16.3",
+    "@types/lodash-es": "^4.17.9",
+    "@types/node": "^18.17.18",
+    "@types/qs": "^6.9.8",
+    "@types/semver": "^7.5.2",
+    "@types/textarea-caret": "^3.0.1",
+    "@types/uuid": "^9.0.4",
+    "autoprefixer": "^10.4.16"
   }
 }
