--- a/web/package.json
+++ b/web/package.json
@@ -16,59 +16,59 @@
     "@emotion/styled": "^11.11.0",
     "@matejmazur/react-katex": "^3.1.3",
     "@mui/joy": "5.0.0-beta.2",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
-    "highlight.js": "^11.8.0",
+    "highlight.js": "^11.9.0",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.1.0",
-    "katex": "^0.16.8",
+    "katex": "^0.16.9",
     "lodash-es": "^4.17.21",
     "long": "^5.2.3",
     "lucide-react": "^0.263.1",
-    "nice-grpc-web": "^3.3.1",
+    "nice-grpc-web": "^3.3.2",
     "protobufjs": "^7.2.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^11.18.6",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
     "react-use": "^17.4.0",
     "semver": "^7.5.4",
     "tailwindcss": "^3.3.3",
     "textarea-caret": "^3.1.0",
     "uuid": "^9.0.1",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/katex": "^0.16.4",
+    "@types/lodash-es": "^4.17.10",
+    "@types/node": "^18.18.6",
+    "@types/qs": "^6.9.9",
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.13",
+    "@types/semver": "^7.5.3",
+    "@types/textarea-caret": "^3.0.1",
+    "@types/uuid": "^9.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "less": "^4.2.0",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "prettier": "3.0.3",
-    "terser": "^5.20.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/katex": "^0.16.3",
-    "@types/lodash-es": "^4.17.9",
-    "@types/node": "^18.17.18",
-    "@types/qs": "^6.9.8",
-    "@types/semver": "^7.5.2",
-    "@types/textarea-caret": "^3.0.1",
-    "@types/uuid": "^9.0.4",
-    "autoprefixer": "^10.4.16"
+    "terser": "^5.22.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   }
 }
